# GPU-project

./: .clangd  .gitignore  README.md  benchmarks.txt  bibliography.bib  main.tex  mst.ipynb
.github/workflows/: latex.yaml
Project/: CMakeLists.txt  MST_hk.cu  MST_hk.cuh  mst.cu  mstCPU.cu  scrap.ipynb
Project/Common/: common.h  sharedMacros.h
Project/DataProcessing/: benchmarkPreprocessing.py  checkGraphColoring.py  resultPlotter.py
Project/DataStructure/: Graph.cpp  Graph.cu  Graph.cuh  Graph.h  Graph_d.cu  Graph_d.h  ReadGraph.cu  ReadGraph.h
fig/tikz/: first_iteration.tikz  graph_struct.tikz
src/: preamble.sty
